# emergingtechnologies

./: CONTRIBUTING.md  DEPENDENCIES_DATAQUALITY  DEPENDENCIES_HOMOMORPHICENCRYPTION  NOTICE.md  README.md
blockchain/: .gitignore  README.md  pyproject.toml  requirements.txt
blockchain/src/blockchain/: __init__.py
blockchain/src/blockchain/logger/: processlogger.py
blockchain/src/blockchain/logic/: blockchain.py  dependencymanager.py  pendingtransactions.py
blockchain/src/blockchain/modules/: block.py  blockheader.py  chain.py  genesisblock.py  transaction.py
blockchain/src/blockchain/persistence/: persistence.py
blockchain/src/blockchain/provchainmodules/: blockchainlistener.py  eventlisteners.py  eventmanager.py  filehandler.py  provcollector.py  user.py
blockchain/src/blockchain/threads/: miner.py  minerlistener.py
blockchain/src/blockchain/utils/: complexencoder.py  sha3helper.py  transactioncomparatorbyfee.py
blockchain/test/: miner_test.py  provchain_miner_test.py  provchain_test.py  test_sha3helper.py
dataquality/: README.md  main.py  requirements.txt
dataquality/backend/: data_model.py  quality_model.py  report.py
dataquality/backend/characteristics/: characteristic.py  completeness_characteristic.py
dataquality/backend/data_processing/: processing.py  (+1 more)
dataquality/frontend/: dashboard.py  modules.py
homomorphicencryption/: Makefile  README.md  docker-compose.yml  requirements.txt  setup.py
homomorphicencryption/config/: hosts.txt  settings.toml
homomorphicencryption/frontend/: Home.py
homomorphicencryption/utils/: Utils.py
(+15 files in other folders)
