[project]
name = "blockchain"
version = "0.1.0"
authors = [
    { name = "Ian Dominic Pfizenmaier Boxleitner", email = "ian.pfizenmaierboxleitner@dlr.de" }
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
